--- a/example/index.html
+++ b/example/index.html
@@ -104,79 +104,80 @@ header {
 
 <script src="http://d3js.org/d3.v2.js?2.9.1"></script>
 <!-- <script src="http://square.github.com/cubism/cubism.v1.js?1.0.0"></script> -->
-<script src="/cubism/cubism.v1.js"></script>
+<script src="dnaism.v1.js"></script>
 <body id="demo">
 <script>
 
-var context = cubism.context()
+var context = dnaism.context()
 //    .serverDelay(new Date(2012, 4, 2) - Date.now())
     .step(864e5) // 24 hours per each pixel
     .size(1280)  // number of pixes to use for the viz
     .stop();     // Since data is static, we don't want to dispatch more events
 
-// Create the top and bottom axis
-d3.select("#demo").selectAll(".axis") // perform the selection of divs (axis class); they don't exists yet
-    .data(["top", "bottom"])          // datums: top and bottom
-  .enter().append("div")              // Each new element will be a div
-    .attr("class", function(d) { return d + " axis"; }) // assign class top|bottom + axis
-    // per each div element (top or bottom) run context.axis() which will add all the svg elements as necessary
-    .each(function(d) { d3.select(this).call(context.axis().ticks(12).orient(d)); });
-
-// Create a new rule which is the vertical line that updates on mousemove.
-d3.select("body").append("div")
-    .attr("class", "rule")
-    .call(context.rule());
-
 if (1===2) {
 
-// Create all the divs that will contain the horizon charts
-d3.select("body").selectAll(".horizon")
-    //.data(["AAPL", "BIDU", "SINA", "GOOG", "MSFT", "YHOO", "ADBE", "REDF", "INSP", "IACI", "AVID", "CCUR", "DELL", "DGII", "HPQ", "SGI", "SMCI", "SNDK", "SYNA"].map(stock))
-    // For generating the datums pull the csv files from the server (check the stock function)
-    .data(["AAPL", "BIDU", "SINA", "GOOG"].map(stock))
-  .enter().insert("div", ".bottom") // Instead of append, insert the new elements (divs) before the .bottom divs
-    .attr("class", "horizon")
-  .call(context.horizon() // Create all the necessary elements within the div to visualize a horizon of our metric
-    .format(d3.format("+,.2p"))); // format current value of the metric
+  // Create the top and bottom axis
+  d3.select("#demo").selectAll(".axis") // perform the selection of divs (axis class); they don't exists yet
+      .data(["top", "bottom"])          // datums: top and bottom
+    .enter().append("div")              // Each new element will be a div
+      .attr("class", function(d) { return d + " axis"; }) // assign class top|bottom + axis
+      // per each div element (top or bottom) run context.axis() which will add all the svg elements as necessary
+      .each(function(d) { d3.select(this).call(context.axis().ticks(12).orient(d)); });
 
-// When we are over any of the charts, display the value of each of the metrics at the locations
-// where the mouse is pointing at
-context.on("focus", function(i) {
-  d3.selectAll(".value").style("right", i == null ? null : context.size() - i + "px");
-});
+  // Create a new rule which is the vertical line that updates on mousemove.
+  d3.select("body").append("div")
+      .attr("class", "rule")
+      .call(context.rule());
 
-// Typically your metrics will be coming from a backend server (cube and graphite are
-// currently suported)
-/* Format of the csv stocks:
-Date,Open,High,Low,Close,Volume
-1-May-12,584.90,596.76,581.23,582.13,21821359
-30-Apr-12,597.80,598.40,583.00,583.98,18076434
-*/
 
-function stock(name) {
-  var format = d3.time.format("%d-%b-%y");
-  // Create a new data source for the metric (company)
-  // The request function will receive start/stop/step and the callback func
-  // Notice that for the example we are going to ignore start/stop/step and just
-  // grab all the values for the metric.
-  return context.metric(function(start, stop, step, callback) {
-    // Request function: We have received a request to pull data for the metric (name)
-    d3.csv("stocks/" + name + ".csv", function(rows) {
-      // Extract only the columns that we need and put it in this format [ Date, Open_value ]
-      // Filter out if we don't have Open Value
-      // Older stock values first
-      rows = rows.map(function(d) { return [format.parse(d.Date), +d.Open]; }).filter(function(d) { return d[1]; }).reverse();
-      // Rows now is an array of arrays: [ [ Date, open_value ], .... ]
-      var date = rows[0][0], compare = rows[400][1], value = rows[0][1], values = [value];
-      rows.forEach(function(d) {
-        // grab all the values
-        while ((date = d3.time.day.offset(date, 1)) < d[0]) values.push(value);
-        values.push(value = (d[1] - compare) / compare);
+  // Create all the divs that will contain the horizon charts
+  d3.select("body").selectAll(".horizon")
+      //.data(["AAPL", "BIDU", "SINA", "GOOG", "MSFT", "YHOO", "ADBE", "REDF", "INSP", "IACI", "AVID", "CCUR", "DELL", "DGII", "HPQ", "SGI", "SMCI", "SNDK", "SYNA"].map(stock))
+      // For generating the datums pull the csv files from the server (check the stock function)
+      .data(["AAPL", "BIDU", "SINA", "GOOG"].map(stock))
+    .enter().insert("div", ".bottom") // Instead of append, insert the new elements (divs) before the .bottom divs
+      .attr("class", "horizon")
+    .call(context.horizon() // Create all the necessary elements within the div to visualize a horizon of our metric
+      .format(d3.format("+,.2p"))); // format current value of the metric
+
+  // When we are over any of the charts, display the value of each of the metrics at the locations
+  // where the mouse is pointing at
+  context.on("focus", function(i) {
+    d3.selectAll(".value").style("right", i == null ? null : context.size() - i + "px");
+  });
+
+  // Typically your metrics will be coming from a backend server (cube and graphite are
+  // currently suported)
+  /* Format of the csv stocks:
+  Date,Open,High,Low,Close,Volume
+  1-May-12,584.90,596.76,581.23,582.13,21821359
+  30-Apr-12,597.80,598.40,583.00,583.98,18076434
+  */
+
+  function stock(name) {
+    var format = d3.time.format("%d-%b-%y");
+    // Create a new data source for the metric (company)
+    // The request function will receive start/stop/step and the callback func
+    // Notice that for the example we are going to ignore start/stop/step and just
+    // grab all the values for the metric.
+    return context.metric(function(start, stop, step, callback) {
+      // Request function: We have received a request to pull data for the metric (name)
+      d3.csv("stocks/" + name + ".csv", function(rows) {
+        // Extract only the columns that we need and put it in this format [ Date, Open_value ]
+        // Filter out if we don't have Open Value
+        // Older stock values first
+        rows = rows.map(function(d) { return [format.parse(d.Date), +d.Open]; }).filter(function(d) { return d[1]; }).reverse();
+        // Rows now is an array of arrays: [ [ Date, open_value ], .... ]
+        var date = rows[0][0], compare = rows[400][1], value = rows[0][1], values = [value];
+        rows.forEach(function(d) {
+          // grab all the values
+          while ((date = d3.time.day.offset(date, 1)) < d[0]) values.push(value);
+          values.push(value = (d[1] - compare) / compare);
+        });
+        callback(null, values.slice(-context.size()));
       });
-      callback(null, values.slice(-context.size()));
-    });
-  }, name);
-}
+    }, name);
+  }
 }
 </script>
 
