--- a/example/index.html
+++ b/example/index.html
@@ -116,53 +116,52 @@ var context = dnaism.context()
                .step(20000);
 
 
-  // Create the top and bottom axis
-  d3.select("#demo").selectAll(".axis") // perform the selection of divs (axis class); they don't exists yet
-      .data(["top", "bottom"])          // datums: top and bottom
-    .enter().append("div")              // Each new element will be a div
-      .attr("class", function(d) { return d + " axis"; }) // assign class top|bottom + axis
-      // per each div element (top or bottom) run context.axis() which will add all the svg elements as necessary
-      .each(function(d) { d3.select(this).call(context.axis().ticks(12).orient(d)); });
+// Create the top and bottom axis
+d3.select("#demo").selectAll(".axis") // perform the selection of divs (axis class); they don't exists yet
+    .data(["top", "bottom"])          // datums: top and bottom
+  .enter().append("div")              // Each new element will be a div
+    .attr("class", function(d) { return d + " axis"; }) // assign class top|bottom + axis
+    // per each div element (top or bottom) run context.axis() which will add all the svg elements as necessary
+    .each(function(d) { d3.select(this).call(context.axis().ticks(12).orient(d)); });
 
 
-  // Create a new rule which is the vertical line that updates on mousemove.
-  d3.select("body").append("div")
-      .attr("class", "rule")
-      .call(context.rule());
+// Create a new rule which is the vertical line that updates on mousemove.
+d3.select("body").append("div")
+    .attr("class", "rule")
+    .call(context.rule());
 
 
-if (1===2) {
+// Create all the divs that will contain the horizon charts
+d3.select("body").selectAll(".horizon")
+    //.data(["AAPL", "BIDU", "SINA", "GOOG", "MSFT", "YHOO", "ADBE", "REDF", "INSP", "IACI", "AVID", "CCUR", "DELL", "DGII", "HPQ", "SGI", "SMCI", "SNDK", "SYNA"].map(stock))
+    // For generating the datums pull the csv files from the server (check the stock function)
+    .data(["Sample1", "Sample2", "Sample3", "Sample4"].map(stock))
+  .enter().insert("div", ".bottom") // Instead of append, insert the new elements (divs) before the .bottom divs
+    .attr("class", "horizon")
+  .call(context.horizon() // Create all the necessary elements within the div to visualize a horizon of our metric
+    .format(d3.format(".2"))); // format current value of the metric
 
-  // Create all the divs that will contain the horizon charts
-  d3.select("body").selectAll(".horizon")
-      //.data(["AAPL", "BIDU", "SINA", "GOOG", "MSFT", "YHOO", "ADBE", "REDF", "INSP", "IACI", "AVID", "CCUR", "DELL", "DGII", "HPQ", "SGI", "SMCI", "SNDK", "SYNA"].map(stock))
-      // For generating the datums pull the csv files from the server (check the stock function)
-      .data(["AAPL", "BIDU", "SINA", "GOOG"].map(stock))
-    .enter().insert("div", ".bottom") // Instead of append, insert the new elements (divs) before the .bottom divs
-      .attr("class", "horizon")
-    .call(context.horizon() // Create all the necessary elements within the div to visualize a horizon of our metric
-      .format(d3.format("+,.2p"))); // format current value of the metric
+// When we are over any of the charts, display the value of each of the metrics at the locations
+// where the mouse is pointing at
+context.on("focus", function(i) {
+  d3.selectAll(".value").style("right", i == null ? null : context.size() - i + "px");
+});
 
-  // When we are over any of the charts, display the value of each of the metrics at the locations
-  // where the mouse is pointing at
-  context.on("focus", function(i) {
-    d3.selectAll(".value").style("right", i == null ? null : context.size() - i + "px");
-  });
+// Typically your metrics will be coming from a backend server (cube and graphite are
+// currently suported)
+/* Format of the csv stocks:
+Date,Open,High,Low,Close,Volume
+1-May-12,584.90,596.76,581.23,582.13,21821359
+30-Apr-12,597.80,598.40,583.00,583.98,18076434
+*/
 
-  // Typically your metrics will be coming from a backend server (cube and graphite are
-  // currently suported)
-  /* Format of the csv stocks:
-  Date,Open,High,Low,Close,Volume
-  1-May-12,584.90,596.76,581.23,582.13,21821359
-  30-Apr-12,597.80,598.40,583.00,583.98,18076434
-  */
-
-  function stock(name) {
-    var format = d3.time.format("%d-%b-%y");
-    // Create a new data source for the metric (company)
-    // The request function will receive start/stop/step and the callback func
-    // Notice that for the example we are going to ignore start/stop/step and just
-    // grab all the values for the metric.
+function stock(name) {
+  var format = d3.time.format("%d-%b-%y");
+  // Create a new data source for the metric (company)
+  // The request function will receive start/stop/step and the callback func
+  // Notice that for the example we are going to ignore start/stop/step and just
+  // grab all the values for the metric.
+  if (false) {
     return context.metric(function(start, stop, step, callback) {
       // Request function: We have received a request to pull data for the metric (name)
       d3.csv("stocks/" + name + ".csv", function(rows) {
@@ -180,7 +179,25 @@ if (1===2) {
         callback(null, values.slice(-context.size()));
       });
     }, name);
+  } else {
+    return context.metric(function(start, stop, step, callback) {
+      var values = [], i;
+
+      start = +start;
+      stop = +stop;
+
+      i = Math.floor((Math.random()*1000)+1);
+      while (start < stop) {
+        start += step;
+        values.push(i);
+        i++;
+      }
+
+      callback(null, values);
+    }, name);
   }
 }
+
+
 </script>
 
