--- a/site/index.html
+++ b/site/index.html
@@ -3,25 +3,111 @@
 
 <style> @import url('style.css'); </style>
 
-<script src="http://d3js.org/d3.v2.js?2.9.1"></script>
-<script src="./dnaism.v1.min.js"></script>
+<script src="d3.js"></script>
+<script src="underscore-min.js"></script>
+<script src="dnaism.v1.min.js"></script>
 
 <head>
-  <title>DNAism demo.</title>
+  <title>DNAism: Horizon Charts for genomics.</title>
 </head>
 
-<h1>DNAism, the demo.</h1>
+<h2><a href="#introduction">>></a>Introduction</h2>
+
+<p> Data visualization is an important method to extract value from
+data in many different domains. Effective visualizations communicate
+clearly the underlying meaning of data. They can also help navigate
+intricate and dense data sets.
+
+<p> The web and its open standards present a fantastic framework to
+build visualization that reach many people. Most likely you have heart
+of <a href="http://d3js.org">D3</a>, a Javascript library that beautifully
+abstracts the low level interactions with the browser to help you create
+powerful visualizations.
+
+<p> Perhaps you are less familiar with a project that uses D3 to visualize
+time series data using a visualization technique called Horizon Charts:
+<a href="http://https://github.com/square/cubism">Cubism</a>.
+
+<p> Our library, DNAism, modifies Cubism to work with genomic data sets
+instead of time.
 
 
-<h2><a href="#what">>></a>What is this?</h2>
 
-<p>This document walks you through the different steps necessary to build a
-visualization using DNAism. You should be familiar with the
+
+<h2><a href="#horizon_charts"></a>Introducing Horizon Charts</h2>
+
+Imagine we have a single variable we want to explore (stock data in this
+case). We could visualize it using a simple line chart:
+
+<div>
+<input id="slider" type="range" min="50" step="10" max="200" value="200"/><span id="slider_value">200</span>
+</div>
+
+<div id="basic_line_chart"></div>
+
+<script>
+function viz_line_chart(data, w, h) {
+  var margin = {top: 20, right: 10, bottom: 20, left: 10},
+      width = w - margin.left - margin.right,
+      height = h - margin.top - margin.bottom,
+
+      x = d3.scale.linear()
+            .range([0, width]);
+
+      y = d3.scale.linear()
+            .range([height, 0]);
+
+      line = d3.svg.line()
+        .x(function(d, i) { return x(i); })
+        .y(function(d, i) { return y(d); });
+
+
+  y.domain(d3.extent(data, function(d) { return d; }));
+  x.domain([0, data.length]);
+
+  var svg = d3.select("#basic_line_chart").append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+  svg.append("path")
+      .datum(data)
+      .attr("class", "line-chart")
+      .attr("d", line);
+}
+
+d3.tsv("/apple.tsv", function(data, error) {
+  var d = _.map(data, function(o) { return +o.Close; }),
+      w = 800, h = 200;
+
+  viz_line_chart(d, w, h);
+
+  d3.select("#slider")
+    .on("input", function() {
+      var new_height = +this.value;
+      d3.select("#slider_value").text(new_height);
+      d3.select("#basic_line_chart").select("svg").remove();
+      viz_line_chart(d, w, new_height);
+    });
+});
+</script>
+
+
+
+
+
+
+
+<h2><a href="#requirements"></a>Requirements</h2>
+
+<p>In order to get the most out of DNAism you should be familiar with the
 DOM, CSS, HTML and <a href="http://d3js.org">D3</a>. You can read
-more about the first three technologies <a href="https://developer.mozilla.org/en-US/docs/Web">here</a>.
+more about the first three technologies
+<a href="https://developer.mozilla.org/en-US/docs/Web">here</a>.
 
 <p>In this example we will use horizon charts to visualize the read depth for a particular
-genome region across multiple <a href="Next Gen">http://en.wikipedia.org/wiki/DNA_sequencing</a>
+genome region across multiple <a href="http://en.wikipedia.org/wiki/DNA_sequencing">DNA sequencing</a>
 samples. Our data is in <a href="http://genome.ucsc.edu/FAQ/FAQformat.html">BED</a> format:
 
 <pre>
