--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,8 @@
 
 <style> @import url('style.css'); </style>
 
+<link rel="stylesheet" href="highlight/styles/tomorrow.css">
+
 <script src="js/d3.js"></script>
 <script src="js/underscore-min.js"></script>
 <script src="js/dnaism.v1.min.js"></script>
@@ -14,25 +16,25 @@
 </head>
 
 <section id="intro" style="background:#fff">
-<h2><a href="#introduction">>></a>Introduction</h2>
+<h2>Introduction</h2>
 
-<p> Data visualization is an important method to extract value from
-data in many different domains. Effective visualizations communicate
-clearly the underlying meaning of data. They can also help navigate
-intricate and dense data sets.
+<p> Visualizations help us understand data in many different domains.
+Effective visualizations expose clearly the underlying meaning of data
+and help us navigate intricate and dense data sets.
 
 <p> The web and its open standards present a fantastic framework to
-build visualization that reach many people. Most likely you have heart
+build visualization that reach many people. Most likely you have heard
 of <a href="http://d3js.org">D3</a>, a Javascript library that beautifully
 abstracts the low level interactions with the browser to help you create
 powerful visualizations.
 
-<p> Perhaps you are less familiar with a project that uses D3 to visualize
-time series data using a visualization technique called Horizon Charts:
-<a href="http://https://github.com/square/cubism">Cubism</a>.
+<p> Perhaps you are less familiar with a project (based in D3) that helps
+visualize time series data using a visualization technique called Horizon
+Charts: <a href="http://github.com/square/cubism">Cubism</a>.
 
-<p> Our library, DNAism, modifies Cubism to work with genomic data sets
-instead of time.
+<p> But Horizon Charts are not only useful in that domain. Biological datasets
+can greatly benefit from them. That's why we have modified the original library
+to work with Genomic Datasets. We call this new library DNAism.
 </section>
 
 
@@ -40,18 +42,41 @@ instead of time.
 
 <section id="line-chart" style="background:#fff">
 
-<h2><a href="#horizon_charts"></a>Introducing Horizon Charts</h2>
+<h2>A case for Horizon Charts</h2>
 
+<p>
 Imagine we have a single variable we want to explore (stock data in this
-case). We could visualize it using a simple line chart:
+case). We could visualize it using a simple line chart (below).
 
-<div>
+<p>
+This method is effective as soon as we have enough vertical space to
+encode the visuals. As we reduce it, we loose graphical perception. Now
+imagine having multiple variables that we want to render in a typical
+display. The method becomes
+<a href="http://www.perceptualedge.com/articles/visual_business_intelligence/time_on_the_horizon.pdf">impractical</a>.
+
+<div id="slider_container">
   <input id="slider" type="range" min="50" step="10" max="200" value="200"/>
   <span>Height size = </span>
   <span id="slider_value">200</span>
 </div>
 
 <div id="basic_line_chart"></div>
+
+<p>
+Under the right conditions, Horizon Charts can help us in this context. Below you
+can see the same datasets this time visually encoded using a Horizon Chart.
+
+<p>
+Initially, we apply different colors to <span class="green">positive</span> and
+<span class="blue">negative</span> values and flip the
+negative ones over the baseline). The Horizon Chart is divided in horizontal bands
+(starting with 1). As we reduce vertical space, we add more bands and collapse them
+over the baseline. Bands are encoded using different color intensities.
+
+<p>
+Observe how the horizon chart is collapsed as the vertical space is reduced and we
+introduce more bands.
 
 <script>
 
@@ -83,13 +108,14 @@ d3.json("data/unemployment.json", function(data, error) {
       d3.select("#basic_line_chart").select("g").selectAll("*").remove();
       svg.call(lchart.height(new_height - margin.top - margin.bottom));
     });
+
+  horizon_example(data);
 });
 </script>
 </section>
 
 
 
-<!--
 <section id="horizon" style="background:#fff">
   <style>
 
@@ -108,30 +134,38 @@ d3.json("data/unemployment.json", function(data, error) {
   </style>
 
   <div id="horizon-controls">
+    <!--
     <input name="mode" type="radio" value="mirror" id="horizon-mode-mirror" checked><label for="horizon-mode-mirror"> Mirror</label>
     <input name="mode" type="radio" value="offset" id="horizon-mode-offset"><label for="horizon-mode-offset"> Offset</label>
-    <span id="horizon-bands"><span id="horizon-bands-value">1</span> <button class="first">&#x2212;</button><button class="last">+</button></span>
+    -->
+    <span id="horizon-bands">
+      <span id="horizon-bands-value">1</span>
+      <button class="first">&#x2212;</button>
+      <button class="last">+</button>
+    </span>
   </div>
+
+  <p>
 
   <div id="horizon-chart"></div>
   <script src="js/horizon.js"></script>
 
   <script>
-  var width = 800,
-      height = 200;
 
-  var chart = d3.horizon()
-      .width(width)
-      .height(height)
-      .bands(1)
-      .mode("mirror")
-      .interpolate("basis");
+  function horizon_example(data) {
+    var width = 800,
+        height = 180;
 
-  var svg = d3.select("#horizon-chart").append("svg")
-      .attr("width", width)
-      .attr("height", height);
+    var chart = d3.horizon()
+        .width(width)
+        .height(height)
+        .bands(1)
+        .mode("mirror")
+        .interpolate("basis");
 
-  d3.json("data/unemployment.json", function(data) {
+    var svg = d3.select("#horizon-chart").append("svg")
+        .attr("width", width)
+        .attr("height", height);
 
     data = common.prepare_employment(data);
 
@@ -149,11 +183,12 @@ d3.json("data/unemployment.json", function(data, error) {
       d3.select("#horizon-bands-value").text(n);
       svg.call(chart.duration(1000).bands(n).height(height / n));
     });
-  });
+  }
+
 
   </script>
 </section>
--->
+
 
 
 
@@ -166,11 +201,12 @@ DOM, CSS, HTML and <a href="http://d3js.org">D3</a>. You can read
 more about the first three technologies
 <a href="https://developer.mozilla.org/en-US/docs/Web">here</a>.
 
-<p>In this example we will use horizon charts to visualize the read depth for a particular
+<p>In the rest of this document we will learn about DNAism by building a
+visualization to help us explore the read depth for a particular
 genome region across multiple <a href="http://en.wikipedia.org/wiki/DNA_sequencing">DNA sequencing</a>
-samples. Our data is in <a href="http://genome.ucsc.edu/FAQ/FAQformat.html">BED</a> format:
+samples. Our input data is in <a href="http://genome.ucsc.edu/FAQ/FAQformat.html">BED</a> format:
 
-<pre>
+<pre><code class="bash">
 $ ls *.bed
 18277.bed       23138.bed       30158.bed       34598.bed  ...
 19466.bed       27347.bed       32510.bed       34600.bed  ...
@@ -184,110 +220,108 @@ $ tail -3 18277.bed
 Chr17   1199991 1199992 41
 Chr17   1199992 1199997 40
 Chr17   1199997 1200000 41
-</pre>
+</code></pre>
+
 
 <p>These bed files live in the server, in the same location of the web files
 that contain the code of the article you are reading.
 
-<h2><a href="#requirements">>></a>Software needed.</h2>
 
 <p> We will start with a basic html document that loads DNAism and its
 only dependency (D3). In this basic document we also load the css styles
 for the different elements that DNAism will be inserting in the document
-as we progress in the visualization. You don't have to fully understand
-those in order to take advantage of this library.
+as we progress in the visualization.
 
-<pre>
-BASIC html here
-</pre>
 
-<p> Maybe more comments about what we have in the html document.
+<p> At the end of our html document we add a script tag. Within it, we will
+be adding all the Javascript code with the instructions to create the visualization.
 
 
 
-<h2><a href="#context">>></a>Creating a context.</h2>
+<h2>Creating a context.</h2>
 
-<p> Now we will start adding Javascript code to create the visualization. This
-code will use different DNAism components, starting with <pre>context()</pre>.
+<p> Our code will use the different DNAism components to create the visualization,
+starting with <span class="api">context()</span>.
 
-<pre>
+<pre><code class="javascript">
 var context = dnaism.context()
                .start(1100000)
                .stop(1200000)
                .size(800)
-               .chrm('Chr17')
-               .step(2);
-</pre>
+               .chrm('Chr17');
+</code></pre>
 
 <p> Here, we define the context of the region of the genome we are interested
-in exploring. We do that by setting the chromosome() and the start() and stop()
-position of the region of interest. In addition we have to specify the space we
-have to visualize the data, in pixels. Finally the step() method allows us to
-control the resolution (FIXMEXXXXXXXXXXX).
+in exploring (Chr17:1100000-1200000). We do that by setting the
+<span class="api">chromosome()</span>
+and the <span class="api">start()</span> and
+<span class="api">stop()</span> position of the region of interest. In addition we
+have to specify the space we have to visualize the data, in pixels.
 
 <p> We haven't rendered any web element yet, we are just telling DNAism what
 region we are interested on.
 
 
-
-<h2><a href="#source">>></a>Sources.</h2>
+<h2>Sources.</h2>
 
 <p> Next we define a source. The interface of a source component defines a
 contract that context uses to requests data for a specific region. All the
 logic on how to retrieve the data is encapsulated in that component.
 
-<pre>
+<pre><code class="javascript">
 var source_bedfile = context.bedfile();
-</pre>
+</code></pre>
 
-<p> For this example we are using the <pre>bedfile()</pre> source. This source's logic
+<p> For this example we are using the <span class="api">bedfile()</span> source. This source's logic
 will request whole files to the server. Notice we haven't yet specified what
-files we want to load, we do that with the next component <pre>metric()</pre>.
+files we want to load, we do that with the next component <span class="api">metric()</span>.
 
 
-<h2><a href="#metrics">>></a>Metrics.</h2>
+<h2>Metrics.</h2>
 
 <p> Now we can use the source we have just created to instantiate as many metrics as
-we want. Those metrics will point to a specific file (or sample). We will create
-only one (sample 18277). We store the metric in an array so we can add
+we want. Those metrics will point to a specific file (or sample). To start, we will
+create only one (sample 18277). We store the metric in an array so we can add
 more metrics later.
 
-<pre>
+<pre><code class="javascript">
 metric = [ source_bedfile.metric("18277.bed") ];
-</pre>
+</code></pre>
+
+<p> We are telling the source we want a metric for a particular sample (18277.bed).
 
 <p> Now DNAism knows how to retrieve data for that particular sample. We can now
-start visualizing the data.
+start creating the visual elements.
 
 
 
-<h2><a href="#horizon">>></a>Creating the horizon chart.</h2>
+<h2>Creating the horizon chart.</h2>
 
-<p> Next we define a source. The interface of a source defines a contract that
-context uses to requests data for a specific region. All the logic on how to
-retrieve the data is encapsulated in that component.
+<p> Bear with me here:
 
-<pre>
+<pre><code class="javascript">
 d3.select("body").selectAll(".horizon")
     .data(metrics)
   .enter().insert("div", ".bottom")
     .attr("class", "horizon")
   .call(context.horizon()
     .format(d3.format(".2")));
-</pre>
+</code></pre>
 
-<p>This can be a daunting snippet for those not familiar with D3 and
+<p> This can be a daunting snippet for those not familiar with D3 and
 Javascript. It is a fundamental
-<a href="http://bost.ocks.org/mike/bar/">pattern</a> in D3.
-At a high level, what we are doing is selecting the element where we
-will be drawing the horizon chart (or charts if there is more than
-one sample we are working on). When D3 calls <pre>context.horizon()</pre>
-the necessary visual elements for the sample will be added to the document.
+<a href="http://bost.ocks.org/mike/bar/">pattern</a> in D3 and you
+should master it if you want to use DNAism beyond basic visualizations.
+
+<p> What we are doing is selecting the html element where we will be drawing
+the horizon chart (or charts if there is more than one sample we are working
+on). We also associate metrics to that selection and apply the class horizon
+to it. Finally D3 calls <span class="api">context.horizon()</span> to create
+the necessary visual elements for the horizon chart we want to create.
 
 <p> And here you have the result:
 
-<div id="single_horizon">
-</div>
+<div id="single_horizon"> </div>
 
 <script>
 var context = dnaism.context()
@@ -312,13 +346,13 @@ d3.select("#single_horizon").selectAll(".horizon")
 <p> Now we can explore the read depth for that regions in more samples,
 just by adding them to the metrics array:
 
-<pre>
+<pre><code class="javascript">
 var metrics = [
   source_bedfile.metric("18277.bed"),
   source_bedfile.metric("19466.bed"),
   source_bedfile.metric("23138.bed"),
 ];
-</pre>
+</code></pre>
 
 <div id="three_samples"> </div>
 
@@ -383,7 +417,8 @@ d3.select("#with_axis").selectAll(".horizon")
 
 
 
-<p> And finally, we can add a rule to help us navigate our dataset:
+<p> And finally, we can add a rule to help us compare the data value for a specific
+location across different samples:
 
 <div id="with_rule"> </div>
 
@@ -423,13 +458,12 @@ d3.select("#with_rule").selectAll(".horizon")
 
 <p> And here is how the final piece of code looks like:
 
-<pre>
+<pre><code class="javascript">
 var context = dnaism.context()
                .start(1100000)
                .stop(1200000)
                .size(800)
-               .chrm('Chr17')
-               .step(2);
+               .chrm('Chr17');
 
 d3.select("#with_rule").selectAll(".axis")
     .data(["top", "bottom"])
@@ -456,4 +490,9 @@ d3.select("#with_rule").selectAll(".horizon")
   .call(context.horizon()
     .format(d3.format(".2")));
 
+</code>
 </pre>
+
+<script src="highlight/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+
