Fixing typo in first section

--- a/site/index.html
+++ b/site/index.html
@@ -45,16 +45,14 @@
   $ cd dnaism/example/depth
   $ make
   Unpacking bed files ...
-  tar -jxf depth.beds.tar.bz2
-  ./gen_html.py > index.html
-  point browser your browser here: http://localhost:8888
+  point your browser here: http://localhost:8888
   python3 -m http.server 8888
   Serving HTTP on 0.0.0.0 port 8888 ...
   </code></pre>
 
-  <p> Here is a video showing replicating the steps from above:
+  <p> Here is a video that shows these steps:
 
-  <p> <iframe src="//player.vimeo.com/video/44891332" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <p> <iframe src="//player.vimeo.com/video/113439870" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
   <p> And now point your browser to <a href="http://localhost:8888">http://localhost:8888"</a>
 
